fix: overflow-x

--- a/src/components/TokenList/_token-list.scss
+++ b/src/components/TokenList/_token-list.scss
@@ -5,7 +5,7 @@
 	right: 0;
 	bottom: 0;
 	z-index: 1040;
-	overflow-y: auto;
+	overflow-x: auto;
 
 	display: flex;
 	justify-content: center;
